--- a/about.html
+++ b/about.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
     <link rel="stylesheet" href="./resources/css/index.css" />
+    <link rel="stylesheet" href="./resources/css/mobile.css" media="only screen and (max-width:600px)">
   </head>
-  <body>
+  <body class="about-page">
     <div class="intro">
       <div class="detail">
         <h1>Who Am I ?</h1>
